--- a/dev/public/style.css
+++ b/dev/public/style.css
@@ -8,10 +8,14 @@ body {
 	padding: 20px;
 	margin: 0 auto;	
 }
+.controlButtonsWrapper {
+	width: 740px;
+	background-color: #d9d9d9;
+}
 .controlButtons {
-	max-width: 700px;
-	width: 700px;
-	padding: 20px;
+	text-align: center;
+	max-width: 450px;
+	margin: auto auto;
 	margin-top: 20px;
 	background-color: #d9d9d9;
 }
@@ -43,4 +47,36 @@ body {
 .amperka {
 	background-color: #ffffff;
 	padding: 20px;
+}
+.messagesWrapper {
+	width: 720px;
+	margin-top: 20px;
+	padding: 10px;
+	background-color: #d9d9d9;
+}
+.messageText {
+	width: 615px;
+	height: 30px;
+	border: solid 0px #000;
+	padding: 0px;
+	margin-bottom: 10px;
+	background-color: #ffffff;
+	font-size: 20px;
+}
+.sendButton {
+	width: 90px;
+	height: 30px;
+	padding: 0px;
+	margin-left: 10px;
+	border: solid 0px #000;
+	background-color: #808080;
+	display: block;
+	float: right;
+}
+.chatBox {
+	width: 720px;
+	max-height: 500px;
+	overflow: auto;
+	margin-top: 20px;
+	background-color: #d9d9d9;
 }
