--- a/dev/public/style.css
+++ b/dev/public/style.css
@@ -9,14 +9,21 @@ body {
 	margin: 0 auto;	
 }
 .controlButtonsWrapper {
-	width: 740px;
+	width: 720px;
+	margin-top: 20px;
+	padding: 10px;
+	background-color: #d9d9d9;
+}
+.controlButtonsTitle {
+	text-align: center;
+	margin: 0 auto;
+	margin-bottom: 10px;
 	background-color: #d9d9d9;
 }
 .controlButtons {
 	text-align: center;
 	max-width: 450px;
 	margin: auto auto;
-	margin-top: 20px;
 	background-color: #d9d9d9;
 }
 .ctrlBtn {
@@ -24,6 +31,7 @@ body {
 	width: 30px;
 	height: 30px;
 	border: 0px;
+	box-shadow: 2px 3px 3px rgba(0,0,0,0.5);
 }
 .ctrlBtn_closed {
 	background-color: #d72e31;
@@ -54,17 +62,23 @@ body {
 	padding: 10px;
 	background-color: #d9d9d9;
 }
+.messagesTitle {
+	text-align: center;
+	margin: 0 auto;
+	margin-bottom: 10px;
+	background-color: #d9d9d9;
+}
 .messageText {
 	width: 615px;
 	height: 30px;
 	border: solid 0px #000;
-	padding: 0px;
+	padding-left: 5px;
 	margin-bottom: 10px;
 	background-color: #ffffff;
 	font-size: 20px;
 }
 .sendButton {
-	width: 90px;
+	width: 89px;
 	height: 30px;
 	padding: 0px;
 	margin-left: 10px;
@@ -79,4 +93,30 @@ body {
 	overflow: auto;
 	margin-top: 20px;
 	background-color: #d9d9d9;
+}
+.voteButtonsWrapper {
+	width: 720px;
+	margin-top: 20px;
+	padding: 10px;
+	background-color: #d9d9d9;
+}
+.voteButtons {
+	text-align: center;
+	max-width: 450px;
+	margin: auto auto;
+	background-color: #d9d9d9;
+}
+.voteButton {
+	margin: 10px;
+	width: 80px;
+	height: 80px;
+	border: 0px;
+	border-radius: 40px;
+	box-shadow: 2px 3px 3px rgba(0,0,0,0.5);
+}
+.voteButtonScare {
+	background-color: #d72e31;
+}
+.voteButtonFeed {
+	background-color: #056c60;
 }
